manifests/ingress-nginx/09-ingress_rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: shop
  labels:
    app.kubernetes.io/name: shop-ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: shop-demo
spec:
  rules:
    - host: shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 8080
