manifests/ingress-nginx/11-cilium-allow-ingress-to-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-nginx-to-frontend
  namespace: shop
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEntities:
        - cluster
